--- a/index.html
+++ b/index.html
@@ -448,8 +448,8 @@
                     { label: 'Transistor bipolaire', url: 'https://drive.google.com/file/d/16UVy6DHufpMPaZQa1qyi4TNEl6PSyB4J/view?usp=sharing' },
                     { label: 'AOP - Cours 1', url: 'https://drive.google.com/file/d/19yUTO335DxkcxfS1LRuNZCEI_x7VGv8T/view?usp=sharing' },
                     { label: 'AOP - Cours 2', url: 'https://drive.google.com/file/d/1TzmJ56Am1I_oq_hmDQx7-RqWdclkG5VK/view?usp=sharing' },
-                    { label: 'Filtres et analyse fréquentielle', url: 'https://drive.google.com/file/d/1gUtmX8vU8Ej_6wDUm6So3Et83FRJMuJv/view?usp=sharing' }
-					{ label: 'Convertisseurs CAN/CNA', url: 'https://drive.google.com/file/d/1igsQqMKyl5BaoTL6K-g52kqF_udXPYcP/view?usp=sharing' }
+                    { label: 'Filtres et analyse fréquentielle', url: 'https://drive.google.com/file/d/1gUtmX8vU8Ej_6wDUm6So3Et83FRJMuJv/view?usp=sharing' },
+		    { label: 'Convertisseurs CAN/CNA', url: 'https://drive.google.com/file/d/1igsQqMKyl5BaoTL6K-g52kqF_udXPYcP/view?usp=sharing' }
                 ],
                 exercices: []
             },
